balance and currency code removed to account domain
